# svelte-manga-api

./: .env  Dockerfile  pyproject.toml  requirements.txt
src/: main.py
src/routers/: router_home.py
