[project]
name = "svelte-manga-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "debugpy>=1.8.14",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
]
